@@ -108,6 +108,13 @@ class TaskRefinerBase (object):
             taskSpec.ramCount = taskParamMap['ramCount']
         else:
             taskSpec.ramCount = 0
+        # for merge
+        """
+        if 'mergeRamCount' in taskParamMap:
+            taskSpec.mergeRamCount = taskParamMap['mergeRamCount']
+        if 'mergeCoreCount' in taskParamMap:
+            taskSpec.mergeCoreCount = taskParamMap['mergeCoreCount']
+        """    
         # scout
         if not taskParamMap.has_key('skipScout') and not taskSpec.isPostScout():
             taskSpec.setUseScout(True)
